--- a/release-please-config.json
+++ b/release-please-config.json
@@ -9,5 +9,8 @@
       "prerelease": false
     }
   },
+  "plugins": [
+    "sentence-case"
+  ],
   "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json"
 }
