--- a/release-please-config.json
+++ b/release-please-config.json
@@ -6,8 +6,7 @@
       "bump-minor-pre-major": false,
       "bump-patch-for-minor-pre-major": false,
       "draft": false,
-      "prerelease": false,
-      "initial-version": "1.0.0"
+      "prerelease": false
     }
   },
   "plugins": [
