--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "29.5.11",
+    "jest": "29.7.0",
+    "ts-jest": "29.1.2",
     "vite": "5.0.12"
   },
   "dependencies": {
