--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           fetch-depth: 0
 
-      - run: git track origin/main
+      - run: git branch --track main origin/main
 
       - uses: pnpm/action-setup@v3
         with:
