--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,9 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  check:
+    uses: ./.github/workflows/ci.yml
+
   release:
     runs-on: ubuntu-latest
     name: Release Please
@@ -33,18 +36,18 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: pnpm/action-setup@v2
+      - uses: pnpm/action-setup@v3
         with:
           version: 8
 
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
+          node-version: 20
           cache: 'pnpm'
 
       - name: Install
-        run: |
-          pnpm install
+        run: pnpm install
 
       - name: Publish
         run: |
