--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
+  "type": "module",
 	"repository": {
 		"url": "https://github.com/marcusthelin/vite-plugin-esi"
 	},
