--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
 	"devDependencies": {
 		"@biomejs/biome": "1.7.1",
 		"@types/jest": "29.5.12",
+		"@types/node": "20.12.7",
 		"jest": "29.7.0",
 		"ts-jest": "29.1.2",
+		"ts-node": "10.9.2",
 		"tsup": "8.0.2",
 		"vite": "5.2.10"
 	},
